--- a/LobbyAppearanceImprovements/LobbyAppearanceImprovements.csproj
+++ b/LobbyAppearanceImprovements/LobbyAppearanceImprovements.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Class1.cs" />
+    <Compile Remove="Testing.cs" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<Reference Include="0Harmony">
 			<HintPath>..\PoseHelper\lib\0Harmony.dll</HintPath>
