added fix for pollution of gameobject in scene b/c effect doesnt destroy itself

--- a/StageVariantsPlus/StageVariantsPlus.csproj
+++ b/StageVariantsPlus/StageVariantsPlus.csproj
@@ -85,6 +85,9 @@
 		<Reference Include="UnityEngine.Networking">
 			<HintPath>..\PoseHelper\lib\UnityEngine.Networking.dll</HintPath>
 		</Reference>
+		<Reference Include="UnityEngine.ParticleSystemModule">
+		  <HintPath>..\PoseHelper\lib\UnityEngine.ParticleSystemModule.dll</HintPath>
+		</Reference>
 		<Reference Include="UnityEngine.PhysicsModule">
 			<HintPath>..\PoseHelper\lib\UnityEngine.PhysicsModule.dll</HintPath>
 		</Reference>
