--- a/AlternateSkills/AlternateSkills.csproj
+++ b/AlternateSkills/AlternateSkills.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Bandit2\PrepPaint2.cs" />
     <Compile Remove="Mercenary\LaserSaw.cs" />
   </ItemGroup>
 
