--- a/PoseHelper/PoseHelper.csproj
+++ b/PoseHelper/PoseHelper.csproj
@@ -26,6 +26,9 @@
     <Reference Include="BetterUI">
       <HintPath>lib\BetterUI.dll</HintPath>
     </Reference>
+    <Reference Include="Facepunch.Steamworks">
+      <HintPath>lib\Facepunch.Steamworks.dll</HintPath>
+    </Reference>
     <Reference Include="HGCSharpUtils">
       <HintPath>lib\HGCSharpUtils.dll</HintPath>
     </Reference>
