--- a/PoseHelper/PoseHelper.csproj
+++ b/PoseHelper/PoseHelper.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands.cs" />
+    <Compile Remove="MainPlugin.cs" />
+    <Compile Remove="ReleasingMage.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>lib\0Harmony.dll</HintPath>
     </Reference>
