--- a/MountainCount/MountainCount.csproj
+++ b/MountainCount/MountainCount.csproj
@@ -23,6 +23,9 @@
 		<Reference Include="BepInEx.Preloader">
 			<HintPath>..\PoseHelper\lib\BepInEx.Preloader.dll</HintPath>
 		</Reference>
+		<Reference Include="BetterUI">
+			<HintPath>..\PoseHelper\lib\BetterUI.dll</HintPath>
+		</Reference>
 		<Reference Include="HGCSharpUtils">
 			<HintPath>..\PoseHelper\lib\HGCSharpUtils.dll</HintPath>
 		</Reference>
