--- a/EngiProjectileTeamSwapSkill/EngiProjectileTeamSwapSkill.csproj
+++ b/EngiProjectileTeamSwapSkill/EngiProjectileTeamSwapSkill.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="ChatEditPlugin.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="UnusedBackup.cs" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="0Harmony">
@@ -93,6 +93,12 @@
 		<Reference Include="UnityEngine.UI">
 			<HintPath>..\PoseHelper\lib\UnityEngine.UI.dll</HintPath>
 		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Engineer\TrickShield\" />
+	  <Folder Include="Engineer\StickyShield\" />
+	  <Folder Include="Engineer\ReflectShield\" />
 	</ItemGroup>
 
 </Project>
