Fixed plugin for SOTV Added LanguageAPI support Added Localization support Updated Readme

--- a/DeathMessageAboveCorpse/DeathMessageAboveCorpse.csproj
+++ b/DeathMessageAboveCorpse/DeathMessageAboveCorpse.csproj
@@ -9,6 +9,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Quotes.cs" />
+	  <Compile Remove="Tokens.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
