mass nuget ref update

--- a/EngiProjectileTeamSwapSkill/EngiProjectileTeamSwapSkill.csproj
+++ b/EngiProjectileTeamSwapSkill/EngiProjectileTeamSwapSkill.csproj
@@ -101,4 +101,8 @@
 	  <Folder Include="Engineer\ReflectShield\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+	</ItemGroup>
+
 </Project>
