--- a/RadarEffectToggleMod/RadarEffectToggleMod.csproj
+++ b/RadarEffectToggleMod/RadarEffectToggleMod.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\PoseHelper\lib\0Harmony.dll</HintPath>
     </Reference>
