--- a/TransformingAIFix/TransformingAIFix.csproj
+++ b/TransformingAIFix/TransformingAIFix.csproj
@@ -7,6 +7,10 @@
 	<ItemGroup>
 	  <Compile Remove="Class1.cs" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+	</ItemGroup>
 	
 	<ItemGroup>
 		<Reference Include="0Harmony">
