--- a/ShopTextPoC/ShopTextPoC.csproj
+++ b/ShopTextPoC/ShopTextPoC.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+  </ItemGroup>
 	
  <ItemGroup>
     <Reference Include="0Harmony">
