--- a/ChatEdit/ChatEdit.csproj
+++ b/ChatEdit/ChatEdit.csproj
@@ -8,6 +8,10 @@
     <Compile Remove="ChatEditPlugin.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<Reference Include="0Harmony">
 			<HintPath>..\PoseHelper\lib\0Harmony.dll</HintPath>
