--- a/PersonalizedPodPrefabs/PersonalizedPodPrefabs.csproj
+++ b/PersonalizedPodPrefabs/PersonalizedPodPrefabs.csproj
@@ -10,6 +10,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Reference Include="0Harmony">
 			<HintPath>..\PoseHelper\lib\0Harmony.dll</HintPath>
 		</Reference>
