--- a/SurvivorTaunts/SurvivorTaunts.csproj
+++ b/SurvivorTaunts/SurvivorTaunts.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+  </ItemGroup>
+
 
 	<ItemGroup>
 		<Reference Include="0Harmony">
