Removed unused LoadTokens() Added default config to use the first game's font Updated readme with changes and preview Removed MTL tokens

--- a/DeathMessageAboveCorpse/DeathMessageAboveCorpse.csproj
+++ b/DeathMessageAboveCorpse/DeathMessageAboveCorpse.csproj
@@ -9,11 +9,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Quotes.cs" />
+	  <Compile Remove="Tokens.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="BepInEx.Core" Version="5.4.17" />
+		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.10.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
