--- a/JellyfishShock/JellyfishShock.csproj
+++ b/JellyfishShock/JellyfishShock.csproj
@@ -9,11 +9,19 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="JellyfishFixedDeathState.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="CharacterBodies.language" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="BepInEx.Core" Version="5.4.17" />
+		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.10.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -33,6 +41,9 @@
 		</Reference>
 		<Reference Include="R2API">
 			<HintPath>..\References\lib\R2API.dll</HintPath>
+		</Reference>
+		<Reference Include="Unity.ResourceManager">
+			<HintPath>..\References\lib\Unity.ResourceManager.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 </Project>
