--- a/SprayMod/SprayMod.csproj
+++ b/SprayMod/SprayMod.csproj
@@ -1,6 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Description>Mod for Risk of Rain 2</Description>
@@ -9,16 +8,12 @@
 		<NullableContextOptions>disable</NullableContextOptions>
 	</PropertyGroup>
 
-
-	<ItemGroup>
-	  <Compile Remove="MithrixSpawnsDronesPlugin.cs" />
-	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.10.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -27,13 +22,23 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.3.1-r.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<PackageReference Include="MMHOOK.RoR2" Version="2022.4.19">
-			<NoWarn>NU1701</NoWarn>
-		</PackageReference>
-		<PackageReference Include="R2API" Version="4.3.5" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+		<Reference Include="MMHOOK_RoR2">
+			<HintPath>..\References\lib\MMHOOK_RoR2.dll</HintPath>
+		</Reference>
+		<Reference Include="R2API">
+			<HintPath>..\References\lib\R2API.dll</HintPath>
+		</Reference>
+		<Reference Include="Unity.ResourceManager">
+			<HintPath>..\References\lib\Unity.ResourceManager.dll</HintPath>
+		</Reference>
+		<Reference Include="Decalicious">
+			<HintPath>..\References\lib\Decalicious.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
