--- a/VoidRaidCrabRestoration/VRCRPlugin.csproj
+++ b/VoidRaidCrabRestoration/VRCRPlugin.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<Description>Mod for Risk of Rain 2</Description>
+		<LangVersion>8.0</LangVersion>
+		<Nullable>disable</Nullable>
+		<NullableContextOptions>disable</NullableContextOptions>
 	</PropertyGroup>
-	
+
+
 	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
@@ -24,6 +30,13 @@
 			<NoWarn>NU1701</NoWarn>
 		</PackageReference>
 		<PackageReference Include="R2API" Version="4.3.5" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<Reference Include="Unity.ResourceManager">
+			<HintPath>..\References\lib\Unity.ResourceManager.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 </Project>
