--- a/FasterPickupText/FasterPickupText.csproj
+++ b/FasterPickupText/FasterPickupText.csproj
@@ -1,11 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<Description>Mod for Risk of Rain 2</Description>
-		<LangVersion>8.0</LangVersion>
-		<Nullable>disable</Nullable>
-		<NullableContextOptions>disable</NullableContextOptions>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -23,12 +20,9 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.3.1-r.0" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.5-r.2" />
+		<PackageReference Include="MMHOOK.RoR2" Version="2024.11.4" NoWarn="NU1701" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<PackageReference Include="MMHOOK.RoR2" Version="2022.4.19">
-			<NoWarn>NU1701</NoWarn>
-		</PackageReference>
-		<PackageReference Include="R2API" Version="4.3.5" />
 	</ItemGroup>
 
 
